# memex

./: .gitignore  Cargo.toml  README.md  data.txt
src/: cliargs.rs  client.rs  daemon.rs  requests.rs  toggl.rs
